	
	* examples/simple/igraph_weighted_adjacency.{c,out} : added
	
2008-04-05  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/cattributes.c (igraph_i_cattribute_add_{edges,vertices}) :
	fixed a memory leak
	
2008-03-25  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/foreign.c (igraph_write_graph_gml) : directed graphs
	are now treated correctly (same as in igraph_read_graph_gml)

2008-03-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/cattributes.c (igraph_i_cattribute_get_string_vertex_attr)
	(igraph_i_cattribute_get_string_edge_attr)
	(igraph_i_cattribute_EAS_set) : bugs corrected

2008-02-21  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structure_generators.c (igraph_adjlist) : added
	* examples/simple/adjlist.c : added
	
	* src/adjlist.c (igraph_adjlist_size) : added

2008-02-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_shortest_paths_dijkstra) : added

	* src/structural_properties.c (igraph_shortest_paths) : return 
	IGRAPH_INFINITY for unreachable vertices

	* src/heap.c (igraph_indheap_push_index, igraph_indheap_push_with_index) 
	: renamed, it was inconsistent here and in the header

2008-02-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_transitiviy_local) : bug fixed

2008-02-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_path_length_hist) : bug fixed

2008-02-10  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_pagerank) : bugs fixed, handle directed graphs

	* src/structureal_properties.c (igraph_pagerank_old) : bug fixed

2008-02-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/arpack.c (igraph_arpack_dssolve, igraph_arpack_dnsolve)
	* src/error.h (igraph_error_type_t)
	* src/error.c (igraph_i_error_strings) : better ARPACK error codes

	* src/flow.c (igraph_i_maxflow_value_undirected)
	(igraph_maxflow_value, igraph_i_mincut_undirected) : allow capacity
	vector to be NULL

2008-02-04  Tamas Nepusz  <ntamas@rmki.kfki.hu>
